Bug #1819 - Accessibility: Color Contrast >footer menu should be black

--- a/wp-content/mu-plugins/css/openlab-toolbar.less
+++ b/wp-content/mu-plugins/css/openlab-toolbar.less
@@ -799,9 +799,9 @@
             }
         }
         .col-links{
-            color: lighten(#666, 7.5%);
+            color: @80gray;
             a{
-                color: lighten(#666, 7.5%);
+                color: @80gray;
                 font-weight: inherit;
             }
             @media (max-width: @screen-xs-max){
@@ -849,7 +849,7 @@
             p,
             span,
             a{
-                color: lighten(#666, 7.5%);
+                color: @80gray;
                 @media (max-width: @screen-xs-max){
                     font-size: 8px;
                 }
